<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="asryab.com.mvvmproject.viewmodels.authorization.forgotpass.ForgotPasswordVM"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/app_container_padding"
        android:background="@color/base_white"
        android:orientation="vertical">

        <TextView
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/check_email"/>

        <TextView
            android:id="@+id/tvDescription_FPF"
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.mEmailResult}"
            tools:text="@string/check_email_description_1"/>

        <TextView
            style="@style/BaseTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_email_description_3"/>

        <TextView
            android:id="@+id/btnDontReceive_FPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/AppTheme.Button.Red"
            android:layout_marginTop="40dp"
            android:onClick="@{viewModel::clickButton}"
            android:text="@string/dont_receive"/>

        <TextView
            android:id="@+id/btnStartSignin_FPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_container_padding"
            style="@style/AppTheme.Button.Grey"
            android:onClick="@{viewModel::clickButton}"
            android:text="@string/go_to_login"/>

    </LinearLayout>
</layout>