<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/base_white"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/gender"
        android:textColor="@color/base_dark_grey"
        android:textSize="@dimen/app_text_size_middle"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/radioGroup_GD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:button="@null"
            android:drawableRight="@drawable/dialog_radio_btn"
            android:text="@string/male"
            android:textColor="@color/base_dark_grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/base_light_grey" />

        <RadioButton
            android:id="@+id/rb_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:button="@null"
            android:drawableRight="@drawable/dialog_radio_btn"
            android:text="@string/female"
            android:textColor="@color/base_dark_grey" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/base_light_grey" />

        <RadioButton
            android:id="@+id/rb_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:button="@null"
            android:drawableRight="@drawable/dialog_radio_btn"
            android:text="@string/other"
            android:textColor="@color/base_dark_grey" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAccept_GD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/base_white"
            android:textColor="@color/base_grey"
            android:text="@string/accept"
            android:textAllCaps="true"
            android:textSize="@dimen/app_text_size_normal"/>

        <Button
            android:id="@+id/btnCancel_GD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/btnAccept_GD"
            android:background="@color/base_white"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/base_grey"
            android:textSize="@dimen/app_text_size_normal"/>
    </RelativeLayout>
</LinearLayout>