<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="asryab.com.mvvmproject.viewmodels.authorization.forgotpass.ForgotPasswordVM" />

        <import type="android.view.View" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/base_white"
            android:orientation="vertical"
            android:padding="@dimen/app_container_padding">

            <TextView
                style="@style/BaseTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_email_description" />


            <EditText
                android:id="@+id/etEmail_FPF"
                style="@style/AppTheme.EditText.WithStroke"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                app:binding="@{viewModel.mEmail}" />

            <TextView
                android:id="@+id/btnSendEmail_FPF"
                style="@style/AppTheme.Button.Red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:clickable="@{viewModel.mIsSendButtonClickable}"
                android:onClick="@{viewModel::clickButton}"
                android:text="@string/send_email" />

        </LinearLayout>

        <ProgressBar
            style="@style/ProgressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="@{viewModel.mIsProgressVisible ? View.VISIBLE : View.GONE}" />
    </FrameLayout>
</layout>